<resources>
    <string name="app_name">IcenLibsDemo</string>
    <string name="demo_ble_entry">Ble Demo</string>
    <string name="demo_config_ble_entry">Config BLE libs</string>

    <string name="ble_demo_start_scan">开始扫描</string>
    <string name="ble_demo_connect">连接</string>
    <string name="ble_demo_switcher">蓝牙开关</string>
    <string name="ble_demo_show_list">显示设备列表</string>


    <string name="ble_common_le_not_enable">蓝牙未开启</string>
    <string name="ble_common_no_connect_device">未连接</string>
    <string name="ble_common_function">测试</string>
    <string name="ble_common_no_name">no-name</string>
    <string name="ble_common_no_information">Null</string>
    <string name="ble_common_settings">设置</string>
    <string name="ble_common_connecting">正在连接，请稍后...</string>
    <string name="ble_common_getting_sl">正在获取设备服务列表，请稍后...</string>
    <string name="ble_common_connect_success">连接名称为%1$s 地址为%2$s的外设成功</string>
    <string name="ble_common_connect_false">连接名称为%1$s 地址为%2$s的外设失败</string>
    <string name="ble_common_connect_exception">名称为%1$s 地址为%2$s的外设连接异常</string>
    <string name="ble_common_service">服务</string>
    <string name="ble_common_characteristic">特征</string>
    <string name="ble_common_read">读特征</string>
    <string name="ble_common_write">命令发送</string>
    <string name="ble_common_battery">电量</string>
    <string name="ble_common_rssi">信号</string>
    <string name="ble_common_disconnect">断开</string>
</resources>
