<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ble_demo_le_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.icen.icenlibs.BleDemoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/ble_demo_le_switch_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/ble_demo_switcher"
            android:textSize="20dp" />

        <Switch
            android:id="@+id/ble_demo_le_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ble_demo_le_switch_title"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/ble_demo_le_scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ble_demo_start_scan"
        android:enabled="false"/>

    <Button
        android:id="@+id/ble_demo_le_connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ble_demo_connect"
        android:enabled="false"/>

    <Button
        android:id="@+id/ble_demo_le_show_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ble_demo_show_list"
        android:enabled="false"/>

    <LinearLayout
        android:id="@+id/ble_demo_le_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:drawable/btn_default"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/ble_demo_le_select_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="111111111111111111"/>
        <TextView
            android:id="@+id/ble_demo_le_select_mac"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="111111111111111111"/>
        <TextView
            android:id="@+id/ble_demo_le_select_class"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="111111111111111111"/>
        <TextView
            android:id="@+id/ble_demo_le_select_rssi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="111111111111111111"/>
        <TextView
            android:id="@+id/ble_demo_le_select_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="111111111111111111"/>
    </LinearLayout>
</LinearLayout>
